[metadata]
name = mm_datasets
description = A tool for downloading multimodal datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmg049/DataSets
author = Jack Geraghty
author_email = jgeraghty049@gmail.com
license = MIT
classifiers =
Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.10
install_requires = gdown

[options.entry_points]
console_scripts =
mm_dataset = mm_datasets:main
